非圧縮に変更

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/chips.loader.js";
       var config = {
-        dataUrl: buildUrl + "/chips.data.gz",
-        frameworkUrl: buildUrl + "/chips.framework.js.gz",
-        codeUrl: buildUrl + "/chips.wasm.gz",
+        dataUrl: buildUrl + "/chips.data",
+        frameworkUrl: buildUrl + "/chips.framework.js",
+        codeUrl: buildUrl + "/chips.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "LeafChips",
         productName: "chips",
